--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,32 @@
+body {
+  background-color: #ccc;
+}
+
+.ttt-wellDone {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transition: transform .8s;
+  transform: translate(-50%, -50%) scale(0);
+
+  &.show {
+  -ms-transform:translate(-50%, -50%) scale(.6) ; /* IE 9 */
+  -webkit-transform:translate(-50%, -50%) scale(.6); /* Safari 3-8 */
+  transform:translate(-50%, -50%) scale(.6);     
+  }
+
+  
+  @media screen and (min-width : 768px) {
+    &.show {
+    -ms-transform: scale(1) translate(-50%, -50%); /* IE 9 */
+    -webkit-transform: scale(1) translate(-50%, -50%); /* Safari 3-8 */
+    transform: scale(1) translate(-50%, -50%);     
+    }
+  }
+}
+
 .App {
   text-align: center;
-  background-color: #ccc;
-  width: 100vw;
-  height: 100vh;
 }
 
 .ttt-wrapper {
@@ -10,29 +34,43 @@
   flex-direction: column;
   justify-content: center;
   margin: auto;
-  width: 50vw;
-  // height: 50vh;
+  padding: 22px;
+  margin: 20px;
   background: #000;
-  transform: scale(.6);
+
+  @media screen and (min-width : 768px) {
+    transform: scale(.6);
+    margin: 0;
+  }
 }
 .ttt-3-cols {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  height: calc(100% / 3);
+  justify-content: center;
+
+  @media screen and (min-width : 768px) { 
+    width: 100%;
+    height: calc(100% / 3);
+  }
 }
 
 .ttt-case {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   border: 1px solid #ccc;
   color: #fff;
-  font-size: 100px;
+  font-size: 70px;
   font-family: 'Arial';
   background-color: transparent;
+  
+  @media screen and (min-width : 768px) { 
+    height: 200px;
+    width: 200px;
+  font-size: 100px;
+  }
 
   &:hover {
     cursor: pointer;
