--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,33 @@
 body {
   background-color: #ccc;
+  overflow: hidden;
+  margin: 0;
 }
-
+.App {
+  &.ttt-overlay {
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #262929;
+      opacity: .4;
+      width: 100%;
+      height: 100%;
+      opacity: .9;
+      z-index: 0;
+    }
+  }
+}
 .ttt-wellDone {
   position: absolute;
   top: 50%;
   left: 50%;
   transition: transform 1s;
   transform: translate(-50%, -50%) scale(0);
-
+  z-index: 1;
   &.show {
     transform: translate(-50%, -50%) scale(.6);     
   }
@@ -57,7 +76,7 @@ body {
   width: 100px;
   height: 100px;
   border: 1px solid #ccc;
-  color: #fff;
+  color: #F560BD;
   font-size: 70px;
   font-family: 'Arial';
   background-color: transparent;
